--- a/app/views/images/edit.html.erb
+++ b/app/views/images/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', image: @image %>
 
-<%= link_to 'Show', @image %> |
-<%= link_to 'Back', images_path %>
+<%= link_to 'Show', item_image_path(@item, @image) %> |
+<%= link_to 'Back', item_image_path %>
