--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -10,5 +10,5 @@
   <%= @image.title %>
 </p>
 
-<%= link_to 'Edit', edit_image_path(@image) %> |
-<%= link_to 'Back', images_path %>
+<%= link_to 'Edit', edit_item_image_path(@item, @image) %> |
+<%= link_to 'Back', item_images_path %>
